[tool.poetry]
name = "repl_python3_YellowgreenCalculatingComputeranimation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
aiohttp-proxy = "^0.1.2"
discord = "^1.7.3"
tasksio = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
